--- a/demographic-client/report-client-web/src/app/layout/components/navbar/navbar.component.scss
+++ b/demographic-client/report-client-web/src/app/layout/components/navbar/navbar.component.scss
@@ -7,6 +7,11 @@
   left: auto !important;
 }
 
+.displayUsername{
+  font-weight: 1000;
+  font-size: 1.2rem;
+}
+
 // Cart Touchspin
 .touchspin-cart {
   .touchspin-wrapper {
