--- a/demographic-client/report-client-web/src/@core/components/core-menu/core-menu.component.html
+++ b/demographic-client/report-client-web/src/@core/components/core-menu/core-menu.component.html
@@ -71,5 +71,14 @@
       class="dropdown dropdown-submenu"
     ></li>
   </ng-container>
+  <!-- Logout Button -->
+  <li class="nav-item">
+    <a class="nav-link" href="javascript:void(0)" (click)="logout()">
+      <i data-feather="power"></i>
+      <span class="menu-title">
+        Logout
+      </span>
+    </a>
+  </li>
 </ng-container>
 <!--/ Horizontal Menu -->
