--- a/demographic-client/report-client-web/src/app/search-screen/search-screen.component.html
+++ b/demographic-client/report-client-web/src/app/search-screen/search-screen.component.html
@@ -94,7 +94,7 @@
       </div>
 
       <div class="lastName">
-        <label for="basicInput">Enter Last Name</label>
+        <label for="basicInput">Enter Name</label>
         <input
           type="text"
           class="form-control"
