--- a/demographic-client/report-client-web/src/app/visual-data/visual-data.component.html
+++ b/demographic-client/report-client-web/src/app/visual-data/visual-data.component.html
@@ -3,10 +3,10 @@
         <div class = "card-title">
             <h2 class = "mt-2 ml-2">Analysis</h2>
         </div>
-        <div class = "card-body text-center">
-            <app-line-chart-view [source] = "'assets/data/accuercy_name.csv'" [title] = "'First Name Accuracy Chart'"></app-line-chart-view>
-            <app-line-chart-view [source] = "'assets/data/accuercy_surname.csv'" [title] = "'Last Name Accuracy Chart'"></app-line-chart-view>
+        <div class = "card-body ">
+            <app-line-chart-view [radioName]="'abc'" [source] = "'assets/data/accuercy_name.csv'" [title] = "'First Name Accuracy Chart'"></app-line-chart-view>
+            <app-line-chart-view [radioName]="'pqr'" [source] = "'assets/data/accuercy_surname.csv'" [title] = "'Last Name Accuracy Chart'"></app-line-chart-view>
         </div>
     </div>
 </div>
-//Structured demographic data deduplication
+
