Added Additional component
Co-authored-by: Jainishsakhidas <Jainishsakhidas@users.noreply.github.com>

--- a/demographic-client/report-client-web/src/@core/components/core-menu/core-menu.component.html
+++ b/demographic-client/report-client-web/src/@core/components/core-menu/core-menu.component.html
@@ -72,7 +72,7 @@
     ></li>
   </ng-container>
   <!-- Logout Button -->
-  <li class="nav-item">
+  <li class="nav-item logout">
     <a class="nav-link" href="javascript:void(0)" (click)="logout()">
       <i data-feather="power"></i>
       <span class="menu-title">
