--- a/demographic-client/report-client-web/src/app/layout/components/navbar/navbar.component.scss
+++ b/demographic-client/report-client-web/src/app/layout/components/navbar/navbar.component.scss
@@ -48,3 +48,10 @@ app-navbar-bookmark {
     }
   }
 }
+
+.horizontal-Menu{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+}
