--- a/demographic-client/report-client-web/src/app/layout/components/navbar/navbar.component.scss
+++ b/demographic-client/report-client-web/src/app/layout/components/navbar/navbar.component.scss
@@ -55,3 +55,14 @@ app-navbar-bookmark {
   justify-content: center;
 
 }
+
+.heading{
+  display: flex;
+  justify-content: space-between;
+}
+
+// .ng-star-inserted{
+//   width: 100%;
+// }
+
+
