--- a/demographic-client/report-client-web/src/app/layout/components/navbar/navbar.component.html
+++ b/demographic-client/report-client-web/src/app/layout/components/navbar/navbar.component.html
@@ -1,14 +1,12 @@
-<div *ngIf="horizontalMenu" >
-  <!-- Navbar brand -->
-  <a class="navbar-brand" [routerLink]="['/']" style = "margin-left:50%;">
-    <h2 class = "text-primary m-2">Structured Demographic Data De-Duplication Portal</h2>
+<div style="width: 100%; text-align: center;" *ngIf="horizontalMenu">
+  <a class="navbar-brand header" [routerLink]="['/']">
+    <h2 class="text-primary m-2 d-none d-lg-block">
+      Structured Demographic Data De-Duplication Portal
+    </h2>
   </a>
-  <!--/ Navbar brand -->
 </div>
-
-<div class="navbar-container d-flex content">
+<div class="navbar-container d-flex content d-lg-none">
   <div class="bookmark-wrapper d-flex align-items-center">
-    <!-- Menu Toggler | Menu icon will be hidden in case of layout without menu -->
     <ul class="nav navbar-nav d-xl-none" *ngIf="!coreConfig.layout.menu.hidden">
       <li class="nav-item">
         <a class="nav-link menu-toggle" (click)="toggleSidebar('menu')">
@@ -16,31 +14,6 @@
         </a>
       </li>
     </ul>
-    <!--/ Menu Toggler -->
-
-    <!-- Toggle skin -->
-
-    <!--/ Toggle skin -->
   </div>
-
-  <ul class="nav navbar-nav align-items-center ml-auto">
-    
-    <!-- ? Language  | Uncomment if needed-->
-    <!-- <li ngbDropdown class="nav-item dropdown dropdown-language">
-      <a class="nav-link dropdown-toggle" id="dropdown-flag" ngbDropdownToggle>
-        <i class="flag-icon flag-icon-{{ languageOptions[_translateService.currentLang].flag }}"></i
-        ><span class="selected-language">{{ languageOptions[_translateService.currentLang].title }}</span></a
-      >
-      <div ngbDropdownMenu aria-labelledby="dropdown-flag">
-        <a *ngFor="let lang of _translateService.getLangs()" ngbDropdownItem (click)="setLanguage(lang)">
-          <i class="flag-icon flag-icon-{{ languageOptions[lang].flag }}"></i> {{ languageOptions[lang].title }}
-        </a>
-      </div>
-    </li> -->
-    <!--/ Language selection -->
-
-    <!-- User Dropdown -->
-
-    <!--/ User Dropdown -->
-  </ul>
+  <ul class="nav navbar-nav align-items-center ml-auto"></ul>
 </div>
