--- a/demographic-client/report-client-web/src/app/authentication/auth-login-v2/auth-login-v2.component.html
+++ b/demographic-client/report-client-web/src/app/authentication/auth-login-v2/auth-login-v2.component.html
@@ -39,7 +39,7 @@
           (ngSubmit)="onSubmit()"
         >
           <div class="form-group">
-            <label class="form-label" for="login-email">Username</label>
+            <label class="form-label" for="login-email">Username<span class="inputRequired">*</span></label>
             <input
               type="text"
               formControlName="email"
@@ -59,7 +59,7 @@
           </div>
           <div class="form-group">
             <div class="d-flex justify-content-between">
-              <label for="login-password">Password</label>
+              <label for="login-password">Password<span class="inputRequired">*</span></label>
             </div>
             <div class="input-group input-group-merge form-password-toggle">
               <input
