--- a/demographic-client/report-client-web/src/styles.scss
+++ b/demographic-client/report-client-web/src/styles.scss
@@ -8,3 +8,6 @@
 // should be after your bootstrap imports, it uses bs4 variables, mixins, functions
 // @import '~ngx-toastr/toastr-bs4-alert';
 
+.danger{
+    color:red;
+}
