--- a/demographic-client/report-client-web/src/app/authentication/auth-register-v2/auth-register-v2.component.html
+++ b/demographic-client/report-client-web/src/app/authentication/auth-register-v2/auth-register-v2.component.html
@@ -28,7 +28,7 @@
         <h2 class="card-title font-weight-bold mb-1">Please Enter Your Information</h2>
         <form class="auth-register-form mt-2" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
-            <label for="register-username" class="form-label">First Name</label>
+            <label for="register-username" class="form-label">First Name <span class = "danger">* </span></label>
             <input
               type="text"
               formControlName="firstname"
@@ -42,7 +42,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="register-username" class="form-label">Last Name</label>
+            <label for="register-username" class="form-label">Last Name <span class = "danger">* </span></label>
             <input
               type="text"
               formControlName="lastname"
@@ -52,11 +52,39 @@
               [ngClass]="{ 'is-invalid': submitted && f.lastname.errors }"
             />
             <div *ngIf="submitted && f.lastnamerrors" class="invalid-feedback">
-              <div *ngIf="f.lastname.errors.required">Username is required</div>
+              <div *ngIf="f.lastname.errors.required">Last Name is required</div>
             </div>
           </div>
           <div class="form-group">
-            <label for="register-dateofbirth" class="form-label">DOB</label>
+            <label for="register-emailId" class="form-label">Email Id <span class = "danger">* </span></label>
+            <input
+              type="text"
+              formControlName="emailId"
+              class="form-control"
+              tabindex="1"
+              autofocus
+              [ngClass]="{ 'is-invalid': submitted && f.emailId.errors }"
+            />
+            <div *ngIf="submitted && f.emailId" class="invalid-feedback">
+              <div *ngIf="f.emailId.errors.required">EmailId is required</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="register-contactnumber" class="form-label">Contact Number <span class = "danger">* </span></label>
+            <input
+              type="text"
+              formControlName="contactnumber"
+              class="form-control"
+              tabindex="1"
+              autofocus
+              [ngClass]="{ 'is-invalid': submitted && f.contactnumber.errors }"
+            />
+            <div *ngIf="submitted && f.contactnumbererrors" class="invalid-feedback">
+              <div *ngIf="f.contactnumber.errors.required">Contact Number is required</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="register-dateofbirth" class="form-label">DOB <span class = "danger">* </span> </label>
             <input
               type="date"
               formControlName="dateofbirth"
@@ -70,7 +98,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="register-address" class="form-label">Address</label>
+            <label for="register-address" class="form-label">Address <span class = "danger">* </span></label>
             <input
               type="text"
               formControlName="address"
@@ -84,7 +112,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="register-password" class="form-label">Password</label>
+            <label for="register-password" class="form-label">Password <span class = "danger">* </span></label>
 
             <div class="input-group input-group-merge form-password-toggle">
               <input
